<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/insee_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsStationActivity">

    <TextView
        android:id="@+id/n_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        tools:text="BAGNAC SUR CELE - Parking de la Planquette" />

    <TextView
        android:id="@+id/enseigne_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_enseigne"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_station"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/n_enseigne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_station"
        app:layout_constraintVertical_bias="0.051"
        tools:text="Révéo" />

    <TextView
        android:id="@+id/id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enseigne_text"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/id_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_enseigne"
        app:layout_constraintVertical_bias="0.052"
        tools:text="FR*S46*P46015*001" />

    <TextView
        android:id="@+id/operateur_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_operateur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_text"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/n_operateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_station"
        app:layout_constraintVertical_bias="0.057"
        tools:text="BOUYGUES ENERGIES ET SERVICES" />

    <TextView
        android:id="@+id/ad_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_adresse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operateur_text"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/ad_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_operateur"
        app:layout_constraintVertical_bias="0.049"
        tools:text="Parking de la Planquette 46270 BAGNAC SUR CELE" />

    <TextView
        android:id="@+id/codeinsee_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_insee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_text"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/code_insee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_station"
        app:layout_constraintVertical_bias="0.043"
        tools:text="46015" />

    <TextView
        android:id="@+id/pdc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pdc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeinsee_text"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/nbre_pdc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_insee"
        app:layout_constraintVertical_bias="0.026"
        tools:text="4" />

    <TextView
        android:id="@+id/puissance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_puissance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pdc_text"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/puiss_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nbre_pdc"
        app:layout_constraintVertical_bias="0.038"
        tools:text="36" />

    <TextView
        android:id="@+id/unite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_unit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toEndOf="@+id/puiss_max"
        app:layout_constraintTop_toBottomOf="@+id/nbre_pdc"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puissance_text"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/type_prise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toEndOf="@+id/type_text"
        app:layout_constraintTop_toBottomOf="@+id/puiss_max"
        app:layout_constraintVertical_bias="0.039"
        tools:text="COMBO" />

    <TextView
        android:id="@+id/acces_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_acces"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_text"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/acces_recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toEndOf="@+id/acces_text"
        app:layout_constraintTop_toBottomOf="@+id/type_prise"
        app:layout_constraintVertical_bias="0.055"
        tools:text="Payant" />

    <TextView
        android:id="@+id/accessibilite_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_accessibilite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acces_text"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/accessibilite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toEndOf="@+id/accessibilite_text"
        app:layout_constraintTop_toBottomOf="@+id/acces_recharge"
        app:layout_constraintVertical_bias="0.038"
        tools:text="24/24 7/7" />

    <TextView
        android:id="@+id/insee_commune_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_insee_commune"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessibilite_text"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/code_insee_commune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toEndOf="@+id/insee_commune_text"
        app:layout_constraintTop_toBottomOf="@+id/accessibilite"
        app:layout_constraintVertical_bias="0.07"
        tools:text="28031" />

    <TextView
        android:id="@+id/region_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_region"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insee_commune_text"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/region_text"
        app:layout_constraintTop_toBottomOf="@+id/code_insee_commune"
        app:layout_constraintVertical_bias="0.064"
        tools:text="28031" />

    <TextView
        android:id="@+id/departement_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_departement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/region_text"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/departement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toEndOf="@+id/departement_text"
        app:layout_constraintTop_toBottomOf="@+id/region"
        app:layout_constraintVertical_bias="0.084"
        tools:text="Eure-et-Loir" />
</androidx.constraintlayout.widget.ConstraintLayout>